hs-bindgen/examples/golden/doxygen_docs.h

/**
 * @brief Callback function type
 *
 * @param event_type Type of event
 * @param user_data User-provided data
 * @return Handling result
 */
typedef int (*event_callback_t)(int event_type, void* user_data);
/**
 * @brief Structure with documented fields
 *
 * This structure demonstrates field documentation.
 */
typedef struct {
    /** @brief Unique identifier */
    uint32_t id;

    /** @brief Human-readable name */
    char name[64];

    /** @brief Configuration flags */
    uint32_t flags;

    /** @brief Optional callback function */
    event_callback_t callback;

    /** @brief User data for callback */
    void* user_data;
} /** Configuration struct */ config_t;
/**
 * @brief Enumeration with documented values
 *
 * This enum shows different status codes.
 */
typedef enum {
    /** @brief Operation successful */
    STATUS_OK = 0,

    /** @brief Invalid parameter provided */
    STATUS_INVALID_PARAM = -1,

    /** @brief Memory allocation failed */
    STATUS_NO_MEMORY = -2,

    /** @brief Operation timed out */
    STATUS_TIMEOUT = -3,

    /** @brief Generic error */
    STATUS_ERROR = -99
} /** Status Code */ status_code_t;
/**
 * @union data_union_t
 * @brief Union with documented fields
 *
 * This union demonstrates different data representations.
 */
typedef union {
    int32_t as_int;    /**< @brief Integer representation */
    float as_float;    /**< @brief Float representation */
    uint8_t as_bytes[4]; /**< @brief Byte array representation */

    /**
     * @brief Structured representation
     * @details Allows access to high and low parts separately
     */
    struct {
        uint16_t low;  /**< @brief Low 16 bits */
        uint16_t high; /**< @brief High 16 bits */
    } /** As Parts Struct */ as_parts;
} /** Union Struct */ data_union_t;
/**
 * @struct bitfield_t
 * @brief Bit field structure
 *
 * Demonstrates bit field documentation.
 */
typedef struct {
    unsigned flag1 : 1;     /**< @brief First flag (1 bit) */
    unsigned flag2 : 1;     /**< @brief Second flag (1 bit) */
    unsigned counter : 6;   /**< @brief Counter value (6 bits) */
    unsigned reserved : 24; /**< @brief Reserved bits (24 bits) */
} bitfield_t;
/**
 * @typedef processor_fn_t
 * @brief Function pointer typedef
 *
 * @param input Input value
 * @param context Context pointer
 * @return Processed value
 */
typedef int (*processor_fn_t)(int input, void* context);
/**
 * @typedef filename_t
 * @brief Array typedef with size
 */
typedef char filename_t[256];
/**
 * @brief Static array parameter
 *
 * @param buffer Buffer with minimum size
 * @param size Actual buffer size
 * @return Number of bytes written
 */
int process_buffer(char buffer[static 64], size_t size);
/**
 * @brief Function with restrict pointers
 *
 * @param dest Destination buffer (restrict)
 * @param src Source buffer (restrict)
 * @param n Number of bytes
 * @return Destination pointer
 */
void* my_memcpy(void* restrict dest, const void* restrict src, size_t n);
/**
 * @brief Function with flexible array member
 *
 * @param count Number of elements
 * @return Allocated structure
 */
struct flexible_array {
    size_t count;      /**< @brief Number of elements */
    int data[];        /**< @brief Flexible array member */
};