hs-bindgen/fixtures/doxygen_docs.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of config_t"][::std::mem::size_of::<config_t>() - 88usize];
    ["Alignment of config_t"][::std::mem::align_of::<config_t>() - 8usize];
    ["Offset of field: config_t::id"][::std::mem::offset_of!(config_t, id) - 0usize];
    ["Offset of field: config_t::name"][::std::mem::offset_of!(config_t, name) - 4usize];
    [
        "Offset of field: config_t::flags",
    ][::std::mem::offset_of!(config_t, flags) - 68usize];
    [
        "Offset of field: config_t::callback",
    ][::std::mem::offset_of!(config_t, callback) - 72usize];
    [
        "Offset of field: config_t::user_data",
    ][::std::mem::offset_of!(config_t, user_data) - 80usize];
};
/// @brief Operation successful
pub const status_code_t_STATUS_OK: status_code_t = 0;
/// @brief Invalid parameter provided
pub const status_code_t_STATUS_INVALID_PARAM: status_code_t = -1;
/// @brief Memory allocation failed
pub const status_code_t_STATUS_NO_MEMORY: status_code_t = -2;
/// @brief Operation timed out
pub const status_code_t_STATUS_TIMEOUT: status_code_t = -3;
/// @brief Generic error
pub const status_code_t_STATUS_ERROR: status_code_t = -99;
/** @brief Enumeration with documented values

 This enum shows different status codes.*/
pub type status_code_t = ::std::os::raw::c_int;
/** @union data_union_t
 @brief Union with documented fields

 This union demonstrates different data representations.*/
#[repr(C)]
#[derive(Copy, Clone)]
pub union data_union_t {
    ///< @brief Integer representation
    pub as_int: i32,
    ///< @brief Float representation
    pub as_float: f32,
    ///< @brief Byte array representation
    pub as_bytes: [u8; 4usize],
    /// As Parts Struct
    pub as_parts: data_union_t__bindgen_ty_1,
}
/** @brief Structured representation
 @details Allows access to high and low parts separately*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct data_union_t__bindgen_ty_1 {
    ///< @brief Low 16 bits
    pub low: u16,
    ///< @brief High 16 bits
    pub high: u16,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    [
        "Size of data_union_t__bindgen_ty_1",
    ][::std::mem::size_of::<data_union_t__bindgen_ty_1>() - 4usize];
    [
        "Alignment of data_union_t__bindgen_ty_1",
    ][::std::mem::align_of::<data_union_t__bindgen_ty_1>() - 2usize];
    [
        "Offset of field: data_union_t__bindgen_ty_1::low",
    ][::std::mem::offset_of!(data_union_t__bindgen_ty_1, low) - 0usize];
    [
        "Offset of field: data_union_t__bindgen_ty_1::high",
    ][::std::mem::offset_of!(data_union_t__bindgen_ty_1, high) - 2usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of data_union_t"][::std::mem::size_of::<data_union_t>() - 4usize];
    ["Alignment of data_union_t"][::std::mem::align_of::<data_union_t>() - 4usize];
    [
        "Offset of field: data_union_t::as_int",
    ][::std::mem::offset_of!(data_union_t, as_int) - 0usize];
    [
        "Offset of field: data_union_t::as_float",
    ][::std::mem::offset_of!(data_union_t, as_float) - 0usize];
    [
        "Offset of field: data_union_t::as_bytes",
    ][::std::mem::offset_of!(data_union_t, as_bytes) - 0usize];
    [
        "Offset of field: data_union_t::as_parts",
    ][::std::mem::offset_of!(data_union_t, as_parts) - 0usize];
};
/** @struct bitfield_t
 @brief Bit field structure

 Demonstrates bit field documentation.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bitfield_t {
    pub _bitfield_align_1: [u32; 0],
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 4usize]>,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of bitfield_t"][::std::mem::size_of::<bitfield_t>() - 4usize];
    ["Alignment of bitfield_t"][::std::mem::align_of::<bitfield_t>() - 4usize];
};
impl bitfield_t {
    #[inline]
    pub fn flag1(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_flag1(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn flag1_raw(this: *const Self) -> ::std::os::raw::c_uint {
        unsafe {
            ::std::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 4usize],
                >>::raw_get(::std::ptr::addr_of!((*this)._bitfield_1), 0usize, 1u8)
                    as u32,
            )
        }
    }
    #[inline]
    pub unsafe fn set_flag1_raw(this: *mut Self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 4usize],
            >>::raw_set(
                ::std::ptr::addr_of_mut!((*this)._bitfield_1),
                0usize,
                1u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn flag2(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_flag2(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn flag2_raw(this: *const Self) -> ::std::os::raw::c_uint {
        unsafe {
            ::std::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 4usize],
                >>::raw_get(::std::ptr::addr_of!((*this)._bitfield_1), 1usize, 1u8)
                    as u32,
            )
        }
    }
    #[inline]
    pub unsafe fn set_flag2_raw(this: *mut Self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 4usize],
            >>::raw_set(
                ::std::ptr::addr_of_mut!((*this)._bitfield_1),
                1usize,
                1u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn counter(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(2usize, 6u8) as u32) }
    }
    #[inline]
    pub fn set_counter(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(2usize, 6u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn counter_raw(this: *const Self) -> ::std::os::raw::c_uint {
        unsafe {
            ::std::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 4usize],
                >>::raw_get(::std::ptr::addr_of!((*this)._bitfield_1), 2usize, 6u8)
                    as u32,
            )
        }
    }
    #[inline]
    pub unsafe fn set_counter_raw(this: *mut Self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 4usize],
            >>::raw_set(
                ::std::ptr::addr_of_mut!((*this)._bitfield_1),
                2usize,
                6u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn reserved(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(8usize, 24u8) as u32) }
    }
    #[inline]
    pub fn set_reserved(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(8usize, 24u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn reserved_raw(this: *const Self) -> ::std::os::raw::c_uint {
        unsafe {
            ::std::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 4usize],
                >>::raw_get(::std::ptr::addr_of!((*this)._bitfield_1), 8usize, 24u8)
                    as u32,
            )
        }
    }
    #[inline]
    pub unsafe fn set_reserved_raw(this: *mut Self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 4usize],
            >>::raw_set(
                ::std::ptr::addr_of_mut!((*this)._bitfield_1),
                8usize,
                24u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        flag1: ::std::os::raw::c_uint,
        flag2: ::std::os::raw::c_uint,
        counter: ::std::os::raw::c_uint,
        reserved: ::std::os::raw::c_uint,
    ) -> __BindgenBitfieldUnit<[u8; 4usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 4usize]> = Default::default();
        __bindgen_bitfield_unit
            .set(
                0usize,
                1u8,
                {
                    let flag1: u32 = unsafe { ::std::mem::transmute(flag1) };
                    flag1 as u64
                },
            );
        __bindgen_bitfield_unit
            .set(
                1usize,
                1u8,
                {
                    let flag2: u32 = unsafe { ::std::mem::transmute(flag2) };
                    flag2 as u64
                },
            );
        __bindgen_bitfield_unit
            .set(
                2usize,
                6u8,
                {
                    let counter: u32 = unsafe { ::std::mem::transmute(counter) };
                    counter as u64
                },
            );
        __bindgen_bitfield_unit
            .set(
                8usize,
                24u8,
                {
                    let reserved: u32 = unsafe { ::std::mem::transmute(reserved) };
                    reserved as u64
                },
            );
        __bindgen_bitfield_unit
    }
}
/** @typedef processor_fn_t
 @brief Function pointer typedef

 @param input Input value
 @param context Context pointer
 @return Processed value*/
pub type processor_fn_t = ::std::option::Option<
    unsafe extern "C" fn(
        input: ::std::os::raw::c_int,
        context: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int,
>;
/** @typedef filename_t
 @brief Array typedef with size*/
pub type filename_t = [::std::os::raw::c_char; 256usize];
unsafe extern "C" {
    /** @brief Static array parameter

 @param buffer Buffer with minimum size
 @param size Actual buffer size
 @return Number of bytes written*/
    pub fn process_buffer(
        buffer: *mut ::std::os::raw::c_char,
        size: usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    /** @brief Function with restrict pointers

 @param dest Destination buffer (restrict)
 @param src Source buffer (restrict)
 @param n Number of bytes
 @return Destination pointer*/
    pub fn my_memcpy(
        dest: *mut ::std::os::raw::c_void,
        src: *const ::std::os::raw::c_void,
        n: usize,
    ) -> *mut ::std::os::raw::c_void;
}
/** @brief Function with flexible array member

 @param count Number of elements
 @return Allocated structure*/
#[repr(C)]
#[derive(Debug)]
pub struct flexible_array {
    ///< @brief Number of elements
    pub count: usize,
    ///< @brief Flexible array member
    pub data: __IncompleteArrayField<::std::os::raw::c_int>,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of flexible_array"][::std::mem::size_of::<flexible_array>() - 8usize];
    ["Alignment of flexible_array"][::std::mem::align_of::<flexible_array>() - 8usize];
    [
        "Offset of field: flexible_array::count",
    ][::std::mem::offset_of!(flexible_array, count) - 0usize];
    [
        "Offset of field: flexible_array::data",
    ][::std::mem::offset_of!(flexible_array, data) - 8usize];
};
unsafe extern "C" {
    /** @brief Function with complex documentation
